--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+npm 
 .searchbar{
 padding-left: 256px;
 }
@@ -31,7 +31,7 @@ padding-left: 256px;
     }
         
         .postsselection{
-            width: 56px;
+            width: 60px;
         }
         .formgroup{
             padding-left: 50px;
