--- a/src/CustomStyle.css
+++ b/src/CustomStyle.css
@@ -20,9 +20,10 @@ position: relative;
 bottom: 35px;
 left: 120px;
 }
-
-
-
+.active{
+    background-color: rgb(160, 160, 160);
+    color: white;
+}
 
 
 
