--- a/src/CustomStyle.css
+++ b/src/CustomStyle.css
@@ -1,10 +1,7 @@
 
-.input{
-    padding-left: 350px;
-}
-.table{
+/* .table{
     padding-left: 255px;
-}
+} */
 .avatar{
     width: 50px;
     height: 50px;
@@ -21,12 +18,16 @@ position: relative;
 bottom: 35px;
 left: 120px;
 }
-.active{
+/* .active{
     background-color: rgb(160, 160, 160);
     color: white;
+} */
+.table{
+    /* margin-top: 100vh; */
 }
-
-
+.tabledata{
+    cursor: pointer;
+}
 
 
 
@@ -61,6 +62,7 @@ font-size: 12px;
     }
     .table{
         padding-left:40px ;
+        width: 100px;
     }
 }
 
