--- a/src/CustomStyle.css
+++ b/src/CustomStyle.css
@@ -1,7 +1,4 @@
 
-/* .table{
-    padding-left: 255px;
-} */
 .avatar{
     width: 50px;
     height: 50px;
@@ -37,14 +34,15 @@ left: 120px;
     padding-left:0;
 }
 .table{
-    /* position: relative; */
-    width: 314px;
-font-size: 12px;
+    width: 335px;
+font-size: 15px;
 }
 .assign{
     font-size: 25px!important;
 }
-
+.pagination{
+    padding-left: 15px;
+}
 }
 
 /* For ipad */
@@ -56,5 +54,7 @@ font-size: 12px;
         padding-left:40px ;
         width: 100px;
     }
+.pagination{
+    padding-bottom: 20px;
 }
-
+}
